2010-05-20 Markus Malkusch <markus@malkusch.de>

    * classes/AbstractAutoloader.php (AbstractAutoloader::CLASS_CONSTRUCTOR):
    The class constructor __static() is deprecated. The new class constructor is
    called classConstructor(). A method which is called __static() would violate
    the PEAR coding standard. Only PHP magic methods should be prefixed with a
    double underscore.

    Code which uses the old class constructor will still work. The autoloader would
    raise an E_USER_DEPRECATED warning for the deprecated class constructor
    __static().

2010-05-18 Markus Malkusch <markus@malkusch.de>

    * classes/AbstractAutoloader.php (AbstractAutoloader::loadClass()):
    The include of the class definition used @ for error suppression. This
    avoided the useful output of fatal errors.

2010-05-09 Markus Malkusch <markus@malkusch.de>

    * classes/parser/AutoloaderFileParser_RegExp.php (AutoloaderFileParser_RegExp::getClassesInSource()):
    AutoloaderFileParser_RegExp has support for Namespaces.

2010-05-08 Markus Malkusch <markus@malkusch.de>

    * classes/parser/AutoloaderFileParser_Tokenizer (AutoloaderFileParser_Tokenizer::getClassesInSource()):
    The Autoloader has support for Namespaces. Only the
    AutoloaderFileParser_Tokenizer is able to determine the namespace of a
    class. The AutoloaderFileParser_RegExp is yet not able to recognize
    namespaces. You can use any possible namespace declaration. The
    AutoloaderFileParser_Tokenizer can handle the braket syntax as well as the
    non braket syntaxt. Multiple namespace declarations in one file are no
    problem.

2010-04-25 Markus Malkusch <markus@malkusch.de>

    * classes/index/filter/AutoloaderIndexFilter_RelativePath.php (AutoloaderIndexFilter_RelativePath):
    An AutoloaderIndex can filter the paths which are stored or read with
    an AutoloaderIndexFilter. The AutoloaderIndexFilter_RelativePath stores